--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GWDS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="style.css"/>
+  <title>GWDS</title>
 </head>
-    <body>
-      <header>
-        <h1></h1>
-        <ul>
-            <li>CARP</li>
-            <li>Typography</li>
-            <li>Reflection</li>
-        </ul>
-      </header>  
-    </body>
+  <body>
+    <header>
+      <h1></h1>
+      <ul>
+          <li>CARP</li>
+          <li>Typography</li>
+          <li>Reflection</li>
+      </ul>
+    </header>  
+  </body>
+
+<body>
+<header>
+  <h1>Welcome to Candace's website</h1>
+    <ul>
+      <div class="container-navigation">
+        <li>Typography</li>
+        <li>CARP</li>
+        <li>Reflection</li>
+      </div>  
+    </ul>
+  </header>  
+
+  <main>
+    <section class="section-one">
+      <h2>Typography</h2>
+       <li>Axial</li>
+       <li>Radial</li>
+       <li>Dilatational</li>
+       <li>Random</li>
+       <li>Grid</li>
+       <li>Modular</li>
+       <li>transitional</li>
+       <li>Bilateral</li>
+    </section>
+  </main>
+</body>
 </html>
