--- a/index.html
+++ b/index.html
@@ -1,40 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="style.css"/>
-  <title>GWDS</title>
+    <link rel="stylesheet" href="style.css"/>
+    <title>GWDS</title>
 </head>
-
-
+    
 <body>
-<header>
-  <h1>Welcome to Candace's website</h1>
-    <ul>
-      <div class="container-navigation">
-        <li>Typography</li>
-        <li>CARP</li>
-        <li>Reflection</li>
-      </div>  
-    </ul>
-  </header>  
+  <header>
+    <h1>Welcome to Candace's Website</h1>
+      <ul>
+        <div class="container-navigation">
+          <li>Typography</li>
+          <li>CRAP</li>
+          <li>Reflection</li>
+        </div>  
+      </ul>
+    </header>  
 
-  <main>
-    <section class="section-one">
-      <h2>Typography</h2>
-       <li>Axial</li>
-       <li>Radial</li>
-       <li>Dilatational</li>
-       <li>Random</li>
-       <li>Grid</li>
-       <li>Modular</li>
-       <li>transitional</li>
-       <li>Bilateral</li>
-    </section>
-  </main>
-</body>
+    <main>
+      <section class="section-one">
+        <h2>Typography</h2>
+        <div class="container">
 
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Axial</h4>
+            <p class="caption"></p>
+          </div>
+
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Radial</h4>
+            <p class="caption"></p>
+          </div>
+
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Dilatational</h4>
+            <p class="caption"></p>
+          </div>
+
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Random</h4>
+            <p class="caption"></p>
+          </div>
+
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Grid</h4>
+            <p class="caption"></p>
+          </div>
+
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Modular</h4>
+            <p class="caption"></p>
+          </div>
+
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Transitional</h4>
+            <p class="caption"></p>
+          </div>
+
+          <div class="Typography-grp">
+            <img class="Typography" src="">
+            <h4>Bilateral</h4>
+            <p class="caption"></p>
+          </div>
+
+
+        </div>
+      </section>
+
+      <section class="section-two">
+        <h3>CRAP Poster</h3>
+        <img class="poster" src="">
+        <p class="caption"></p>
+      </section>
+
+      <section class="section-three">
+        <h3>Reflection</h3>
+        <p class="Reflection"></p>
+
+      </section>
+    </main>
+  </body>
 </html>
