--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul>
         <div class="container-navigation">
           <li>Typography</li>
-          <li>CRAP</li>
+          <li>CARP</li>
           <li>Reflection</li>
         </div>  
       </ul>
@@ -78,7 +78,7 @@
       </section>
 
       <section class="section-two">
-        <h3>CRAP Poster</h3>
+        <h3>CARP Poster</h3>
         <img class="poster" src="">
         <p class="caption"></p>
       </section>
