--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="container">
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-01.jpg">
             <h4>Axial</h4>
             <p class="caption"></p>
           </div>
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-02.jpg">
             <h4>Radial</h4>
             <p class="caption"></p>
           </div>
@@ -50,7 +50,7 @@
           </div>
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-05.jpg">
             <h4>Grid</h4>
             <p class="caption"></p>
           </div>
@@ -68,7 +68,7 @@
           </div>
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-08.jpg">
             <h4>Bilateral</h4>
             <p class="caption"></p>
           </div>
@@ -89,5 +89,10 @@
 
       </section>
     </main>
+
+    <footer>
+      made by Candace @_@
+    </footer>
   </body>
 </html>
+
