--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <h1>Welcome to Candace's Website</h1>
       <ul>
         <div class="container-navigation">
-          <li>Typography</li>
-          <li>CARP</li>
-          <li>Reflection</li>
+          <button>Typography</button>
+          <button>CARP</button>
+          <button>Reflection</button>
+          <button>Coding WS</button>
+          <button>P5.JS</button>
         </div>  
       </ul>
     </header>  
@@ -88,6 +90,10 @@
         <p class="Reflection"></p>
 
       </section>
+
+      <section class="section-four">
+        <h3>Coding WS</h3>
+      </section>
     </main>
 
     <footer>
@@ -95,4 +101,3 @@
     </footer>
   </body>
 </html>
-
