update style n link photos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-03.jpg">
             <h4>Dilatational</h4>
             <p class="caption"></p>
           </div>
@@ -58,13 +58,13 @@
           </div>
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-06.jpg">
             <h4>Modular</h4>
             <p class="caption"></p>
           </div>
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-07.jpg">
             <h4>Transitional</h4>
             <p class="caption"></p>
           </div>
