--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section id="section-one">
       <section class="section-one">
         
-        <h2>Typography</h2>
+        <h2><a href="typography.html">Typography</a></h2>
         <div class="container">
 
           <div class="Typography-grp">
