--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
       <section id="section-four">
       <section class="section-four">
         <button1><a href="index.html">Home</a></button1>
-        <h3>Coding WS</h3>
+        <h3>Coding Worksheet</h3>
+        <button2><a href="https://candacecy0215.github.io/GWDSws/" target="_blank">Pizza&Cake</a></button2>
+        <p class="ws">WS2-3:</p>
+        <button2><a href="https://candacecy0215.github.io/GWDSws2/" target="_blank">Flexbox&Buttons</a></button2>
+        <p class="ws"></p>
       </section>
       </section>
 
