--- a/typography.html
+++ b/typography.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style2.css"/>
-    <title>typography</title>
+    <title>Typography</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
             <h4>Axial</h4>
             <img class="Typography" src="typography (3)-01.jpg">
             
-            <p class="caption">hello</p>
+            <p class="caption"></p>
           </div>
 
           <div class="Typography-grp">
