--- a/itcc.html
+++ b/itcc.html
@@ -49,9 +49,9 @@
               <img class="itcc-pic" src="HKnightview.png"></a></h6>
               <p class="caption">The idea of this artwork is inspired by the beautiful cityscape in Hong Kong, 
                 the city where I come from.
-                THis artwork is a deisgn of postcard which is used 12 bright colours,
+                This artwork is a deisgn of postcard which is used 12 bright colours,
                 represent that Hong Kong is a multicultural city.
-                A light and sound show that is held across the Victoria Harbour everyday named'A Symphony of Lights.
+                A light and sound show that is held across the Victoria Harbour everyday named'A Symphony of Lights'.
                 The highest building is The International Finance Center(IFC),which is one of the landmark in Hong Kong, 
                 and the Oserbvation Wheel,where located next to the central ferris pier, 
                 is currently one of the popular place that many tourist will visit.
