--- a/typography.html
+++ b/typography.html
@@ -32,7 +32,7 @@
             <h4>Axial</h4>
             <img class="Typography" src="typography (3)-01.jpg">
             
-            <p class="caption"></p>
+            <p class="caption"> Axial is one of the most common typography system used in the industry.</p>
           </div>
 
           <div class="Typography-grp">
