--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h3>CARP Poster</h3>
         <h5>Contrast, Alignment, Repetition, Proximity</h5>
         <img class="poster" src="">
-        <p class="caption"></p>
+        <p class="poster"></p>
       </section>
       </section>
 
