--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="Typography-grp">
-            <img class="Typography" src="">
+            <img class="Typography" src="typography (3)-04.jpg">
             <h4>Random</h4>
             
           </div>
