--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
       <section class="section-three">
         <button1><a href="index.html">Home</a></button1>
         <h3>Reflection</h3>
-        <p class="Reflection">Building a flexbox website has been a useful practice that provided a chance to expand my technical skills. I have explored the knowledge of coding, designing principles and the interactivity of users. There were some challenges I faced during building the website. One of them was the blank place between sections and some items were not flexible when reducing the screen frame size. I did some research online but mainly asked for help during the lesson time. After receiving guidance, I identified the issues and proceeded to debug. Instead of ‘margin’, using ‘padding’ achieved the desired outcome.</p>
+        <p class="Reflection">Building a flexbox website has been a useful practice that provided a chance to expand my technical skills. 
+          I have explored the knowledge of coding, designing principles and the interactivity of users. 
+          There were some challenges I faced during building the website. One of them was the blank place between sections and some items were not flexible when reducing the screen frame size. 
+          I did some research online but mainly asked for help during the lesson time. After receiving guidance, I identified the issues and proceeded to debug. 
+          Instead of "margin", using "padding" achieved the desired outcome.</p>
 
       </section>
       </section>
