--- a/index.html
+++ b/index.html
@@ -97,11 +97,17 @@
       <section class="section-three">
         <button1><a href="index.html">Home</a></button1>
         <h3>Reflection</h3>
-        <p class="Reflection">Building a flexbox website has been a useful practice that provided a chance to expand my technical skills. 
-          I have explored the knowledge of coding, designing principles and the interactivity of users. 
-          There were some challenges I faced during building the website. One of them was the blank place between sections and some items were not flexible when reducing the screen frame size. 
-          I did some research online but mainly asked for help during the lesson time. After receiving guidance, I identified the issues and proceeded to debug. 
-          Instead of "margin", using "padding" achieved the desired outcome.</p>
+        <p class="Reflection">
+            Building a flexbox website has been a valuable practice providing an opportunity to enhance my technical skills. 
+            Throughout the process, I explored the knowledge of coding, designing principles and user interactivity. 
+            There were some challenges I faced during building the website. 
+            One of them was the blank spaces between sections and inflexibility when reducing the screen size. 
+            I conducted research online and sought help during the lesson time.
+            With the guidance received, I identified and debugged the issues. 
+            Instead of using ‘margin’, I found that using ‘padding’ achieved the desired outcome. 
+            Besides, rather than specifying the width and height of each image, setting “max-width”,  
+            adjusting the width to 100% and setting the “height” value to auto proved to be more flexible, 
+            allowing the image to adapt to the website’s pixel dimensions.</p>
 
       </section>
       </section>
