--- a/itcc.html
+++ b/itcc.html
@@ -16,7 +16,7 @@
             <button1><a href="index.html">Home</a></button1>
             <button><a href="typography.html">Typography</a></button>
             <button><a href="index.html#section-two">CARP</a></button>
-            <button><a href="index.html#section-three">Reflection</a></button>
+            <button><a href="reflection.html">Reflection</a></button>
             <button><a href="index.html#section-four">Coding WS</a></button>
             
             
