--- a/typography.html
+++ b/typography.html
@@ -15,7 +15,7 @@
         <div class="container-navigation">
           <button1><a href="index.html">Home</a></button1>
           <button><a href="index.html#section-two">CARP</a></button>
-          <button><a href="index.html#section-three">Reflection</a></button>
+          <button><a href="reflection.html">Reflection</a></button>
           <button><a href="index.html#section-four">Coding WS</a></button>
           <button><a href="itcc.html">P5.JS</a></button>
         </div>  
