--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-navigation">
           <button><a href="typography.html">Typography</a></button>
           <button><a href="#section-two">CARP</a></button>
-          <button><a href="#section-three">Reflection</a></button>
+          <button><a href="reflection.html">Reflection</a></button>
           <button><a href="#section-four">Coding WS</a></button>
           <button><a href="itcc.html">P5.JS</a></button>
           
@@ -97,27 +97,9 @@
       <section class="section-three">
         <button1><a href="index.html">Home</a></button1>
         <h3>Reflection</h3>
+        <a href="reflection.html">Short essay</a>
         <p class="Reflection">
-            Website:
-            Building a flexbox website has been a valuable practice providing an opportunity to enhance my technical skills. 
-            Throughout the process, I explored the knowledge of coding, designing principles and user interactivity. 
-            There were some challenges I faced during building the website. 
-            One of them was the blank spaces between sections and inflexibility when reducing the screen size. 
-            I conducted research online and sought help during the lesson time.
-            With the guidance received, I identified and debugged the issues. 
-            Instead of using ‘margin’, I found that using ‘padding’ achieved the desired outcome. 
-            Besides, rather than specifying the width and height of each image, setting “max-width”,  
-            adjusting the width to 100% and setting the “height” value to auto proved to be more flexible, 
-            allowing the image to adapt to the website’s pixel dimensions.
-            Poster:
-            The most challenging aspect of the project, for me, was designing the poster. 
-            This presented a practical challenge as this was the first time to design a poster with specific content and concepts that I was not familiar with. 
-            I struggle with generating ideas, choosing suitable colours, 
-            and determining the optimal placement of the content to give the poster a dynamic appearance, especially creating a sports poster. 
-            Applying the elements and knowledge learned in the lectures, 
-            I found that using different font size, word colours and font styles would help the creation of a more engaging and informative poster. 
-            These design choices helped express the necessary information and highlight the key selling point of the event.
-        </p>
+            </p>
 
       </section>
       </section>
