--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="style.css"/>
     <title>GWDS</title>
+    <link rel="icon" href="face.png" type="image/png">
 </head>
     
 <body>
