--- a/itcc.html
+++ b/itcc.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="style.css"/>
     <title>ItCC</title>
+    <link rel="icon" href="face.png" type="image/png">
 </head>
 
 <body>
