--- a/typography.html
+++ b/typography.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="style2.css"/>
     <title>Typography</title>
+    <link rel="icon" href="face.png" type="image/png">
 </head>
 
 <body>
