--- a/reflection.html
+++ b/reflection.html
@@ -44,6 +44,11 @@
                   Besides, rather than specifying the width and height of each image, setting “max-width”,  
                   adjusting the width to 100% and setting the “height” value to auto proved to be more flexible, 
                   allowing the image to adapt to the website’s pixel dimensions.
+                  Moreover, I found building the website to be the most interesting part of this project, 
+                  dedicating the majority of my time to it. 
+                  I hope to have more opportunities to explore website coding or backend development in the future 
+                  and further raise my interest in coding.
+
                   </p>
                   <p class="Reflection">
                   <strong>Poster:</strong>
