--- a/reflection.html
+++ b/reflection.html
@@ -31,7 +31,11 @@
               <h3>Reflection</h3>
               <div class="container">
               <div class="reflection">
-             
+              <p class="Reflection">
+                Overall, this project is an opportunity to let me explore my interest in both graphic and web design aspects. 
+                One Challenge I faced was lack of focus on the graphic design elements as I put most of the time into improving the website. 
+                Moving forward, I recognise the importance of balancing attention evenly across different aspects to achieve better time management. 
+              </p>
               <p class="Reflection">
                  <strong>Website:</strong> 
                   Building a flexbox website has been a valuable practice providing an opportunity to enhance my technical skills. 
@@ -53,13 +57,35 @@
                   <p class="Reflection">
                   <strong>Poster:</strong>
                   The most challenging aspect of the project, for me, was designing the poster. 
-                  This presented a practical challenge as this was the first time to design a poster with specific content and concepts that I was not familiar with. 
+                  This presented a practical challenge as this was the first time to design a poster 
+                  with specific content and concepts that I was not familiar with. 
                   I struggle with generating ideas, choosing suitable colours, 
-                  and determining the optimal placement of the content to give the poster a dynamic appearance, especially creating a sports poster. 
+                  and determining the optimal placement of the content to give the poster a dynamic appearance, 
+                  especially creating a sports poster. 
                   Applying the elements and knowledge learned in the lectures, 
-                  I found that using different font size, word colours and font styles would help the creation of a more engaging and informative poster. 
-                  These design choices helped express the necessary information and highlight the key selling point of the event.
-              </p>
+                  I found that using different font size, word colours and font styles 
+                  would enhance the creation of a more engaging and informative poster. 
+                  These design choices helped express the necessary information 
+                  and highlight the key selling point of the event. 
+                  Although creating a brand new design was one of my weaker points, 
+                  I would like to have more practice in the future to broaden my skills.
+                </p>
+                <p class="Reflection">
+                    <strong>Typography:</strong>
+                    Typography was an interesting aspect of this project 
+                    and provided valuable practice for creating simple designs. 
+                    I had to outline the features of each typography system 
+                    and determine the optimal placement for the content. 
+                    During the design phase, I struggled to step out of my comfort zone, 
+                    as I prefer to align items to create a tidy and concise design with white space. 
+                    To address this challenge, I conducted research for ideas. 
+                    I found that I could complete “Axial”, ”Radial”, ”Grid” and “Bilateral” 
+                    these four designs relatively quickly and with greater satisfaction. 
+                    However, “Dilatational”, ”Random”, ”Modular” and”Transitional” 
+                    these four designs were less satisfying 
+                    as these designs needed more creativity to arrange the content effectively. 
+                    In the future, I would like to practise and enhance my skills further.
+                </p>
               </div>
              </div>
             </section>
