--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section id="section-three">
       <section class="section-three">
         <button1><a href="index.html">Home</a></button1>
-        <h3><a href="reflection.html">Reflection</a></h3>
+        <a href="reflection.html"><h3>Reflection</h3></a>
         <div class="reflection">
           
         
