--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <h2><a href="typography.html">Typography</a></h2>
         <div class="container">
 
-          <div class="Typography-grp">
+          <div class="Typography-grp"><a href="typography.html#Axial">
             <img class="Typography" src="typography (3)-01.jpg">
             <h4>Axial</h4>
-            
+            </a>
           </div>
 
           <div class="Typography-grp">
