--- a/typography.html
+++ b/typography.html
@@ -28,6 +28,7 @@
         <h2>Typography</h2>
         <div class="container">
 
+          <section id="Axial">
           <div class="Typography-grp">
             <h4>Axial</h4>
             <img class="Typography" src="typography (3)-01.jpg">
@@ -42,8 +43,9 @@
             </p>
             <!-- </p> -->
           </div>
-
+          </section>
           <div class="Typography-grp">
+
             <h4>Radial</h4>
             <img class="Typography" src="typography (3)-02.jpg">
             
