--- a/itcc.html
+++ b/itcc.html
@@ -75,7 +75,7 @@
          </div> 
         
         
-        <a href="https://candacecyl.wordpress.com" target="_blank"><h6>Journal: https://candacecyl.wordpress.com</h6></a>
+        <h6>Journal: </h6><a href="https://candacecyl.wordpress.com" target="_blank"><h6>https://candacecyl.wordpress.com</h6></a>
         <h6>Report</h6>
         <button><a href="itcc.html">Creative Coding</a></button>
       </section>
