--- a/index.html
+++ b/index.html
@@ -89,8 +89,21 @@
         <button1><a href="index.html">Home</a></button1>
         <h3>CARP Poster</h3>
         <h5>Contrast, Alignment, Repetition, Proximity</h5>
-        <img class="poster" src="">
-        <p class="poster"></p>
+        <div class="container-CARP">
+          <a href="poster.pdf" target="_blank">
+            <img class="Poster" src="poster.jpg">
+          </a>
+        <!-- </div> -->
+        <!-- <div class="container-CARP"> -->
+        
+        <p class="poster">
+          Poster has used the bilateral typographic system aligning elements to present a concise design. 
+          Various font weights, font sizes and colours are used to convey content and create contrast. 
+          The use of white space enhances the visual experience to readers 
+          and effectively grouping related information together.
+        </p></div>
+
+        
       </section>
       </section>
 
@@ -114,8 +127,9 @@
       <section class="section-four">
         <button1><a href="index.html">Home</a></button1>
         <h3>Coding Worksheet</h3>
-        <button2><a href="https://candacecy0215.github.io/GWDSws/" target="_blank">Pizza&Cake</a></button2>
         <p class="ws">WS2-3:</p>
+        <button2><a href="https://candacecy0215.github.io/GWDSws/" target="_blank">Pizza&Cake</a></button2>
+        <p class="ws">WS4-5:</p>
         <button2><a href="https://candacecy0215.github.io/GWDSws2/" target="_blank">Flexbox&Buttons</a></button2>
         <p class="ws"></p>
       </section>
