--- a/reflection.html
+++ b/reflection.html
@@ -67,6 +67,8 @@
                   would enhance the creation of a more engaging and informative poster. 
                   These design choices helped express the necessary information 
                   and highlight the key selling point of the event. 
+                  Nevertheless, there is a space for greater dynamism and creativity in the poster design 
+                  having an opportunity for substantial improvement.
                   Although creating a brand new design was one of my weaker points, 
                   I would like to have more practice in the future to broaden my skills.
                 </p>
